--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ueberdosis/y-tiptap.git"
+    "url": "git+https://github.com/WilliamLiao2015/y-tiptap.git"
   },
   "keywords": [
     "Yjs"
