chore: Include `rollup.config.js` in package.json files list

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   },
   "files": [
     "dist/*",
-    "!dist/test.*"
+    "!dist/test.*",
+    "rollup.config.js"
   ],
   "repository": {
     "type": "git",
