--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "preversion": "npm run lint && npm run dist && npm run test",
     "publish": "npm run preversion && npm publish --access public",
     "publish:pre": "npm run preversion && npm publish --access public --tag beta",
-    "start": "concurrently '0serve -o demo/prosemirror.html' 'npm run watch'",
-    "postinstall": "npm run dist"
+    "start": "concurrently '0serve -o demo/prosemirror.html' 'npm run watch'"
   },
   "exports": {
     ".": {
@@ -29,8 +28,7 @@
   },
   "files": [
     "dist/*",
-    "!dist/test.*",
-    "rollup.config.js"
+    "!dist/test.*"
   ],
   "repository": {
     "type": "git",
